--- a/index.html
+++ b/index.html
@@ -7,6 +7,11 @@
   <link rel="stylesheet" href="style.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" />
+  <meta name="title" content="Teenager Freelancing Platform - Earn Money by Showcasing Your Skills">
+  <meta name="description" content="Join our platform designed for teenagers to freelance and earn money by showcasing their unique skills. Start your journey to financial independence today!">
+  <meta name="keywords" content="teenager freelancing, earn money as a teenager, teenage earning app, showcase skills, teenage freelancing platform, teen jobs, teen gigs, freelance work for teens">
+  <meta name="author" content="Your Company Name">
+  <meta name="robots" content="index, follow">
 </head>
 <body>
   <header>
